# path-tracer

./: .gitignore  CMakeLists.txt  README.md
include/geometry/: Direccion.hh  Esfera.hh  Geometria.hh  Objeto.hh  Plano.hh  Punto.hh  Rayo.hh  Triangulo.hh  operaciones.hh  transformaciones.hh
include/imaging/: Imagen.hh  Pixel.hh  ToneMapping.hh
include/sensor/: Escena.hh  LuzPuntual.hh  PinholeCamara.hh  Renderer.hh
scripts/: compiler.sh  compiler_cleaner.sh
src/geometry/: Direccion.cc  Esfera.cc  Geometria.cc  Objeto.cc  Plano.cc  Punto.cc  Rayo.cc  Triangulo.cc  operaciones.cc  transformaciones.cc
src/imaging/: Imagen.cc  Pixel.cc  ToneMapping.cc
src/sensor/: Escena.cc  LuzPuntual.cc  PinholeCamara.cc  Renderer.cc
tests/imaging/: test_exr.cc  test_png.cc  test_tonemapping.cc
tests/sensor/: T1-01-dif.cc  T1-02-esp.cc  T1-03-ref.cc  T1-04-espRef.cc  T1-05-mezcla.cc  T1-06-convergencia.cc  T1-07-convergenciaArea.cc  T1-08-colorBleeding.cc  T1-09-sombrasDuras.cc  T1-10-sombrasSuaves.cc  T1-11-causticas.cc
